--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
 
 dependencies = []
 
-requires-python = ">= 3.10,<=3.12"
+requires-python = ">= 3.10,< 3.13"
 
 [project.urls]
 Homepage = "https://github.com/Tsunami014/Blaze-Sudio"
